- fixes for compilation with OpenWatcom compiler
- fixed wxStaticText best size calculation (was wrong by '&' width)
- fixed calling wxFrame::Maximize(FALSE) before the window is shown
- all libraries built with makefile.g95 have a _min or _cyg suffix
  (for MinGW and Cygwin)
- When using DLL, wxLocalFSHandler was not being exported - added
  WXEXPORTDLL
- A wxEvtHandler object was not removed from wxPendingEvents on deletion. 
  wxPendingEventsLocker was being deleted in App before all wxEvtHandler
  objects have been destroyed resulting in stale handler/lock
  ptrs; fixed
- Windows XP manifest is now included in wx.rc; it is no longer neccessary
  to ship .exe.manifest file with applications to support XP themes
- wxLocale::Init no longer reports error if trying to set Unicode-only locale
  or if user's default locale is Unicode-only
- Improved border handling so it no longer shows a thin and
  sunken border under XP
- partial fix for wxNotebook pages looking bad under XP: wxUSE_UXTHEME
  enables XP theme engine code, and wxUSE_UXTHEME_AUTO tells
  wxWindows to use the theme tab colour for control backgrounds.
  Proper XP theme support is planned for 2.6
- disable wxNB_RIGHT, wxNB_LEFT, wxNB_BOTTOM notebook styles
  if the version of CommCtl doesn't support it (XP)

wxMotif:

- made wxFileDialog behaviour with complex wildcards more sensible (it still
  does not support all the features other ports do); refer to wxFileDialog
  documentation for a detailed explanation
- implemented wxWakeUpIdle
- for Motif 2.0, used the native combobox widget instead of the GPL'd
  xmcombo; xmcombo is still used for Motif 1.x and Lesstif when compiled
  with Motif 1.x compatibility
- implemented wxToggleButton
- wxRadioBox and wxStaticBox now use the default shadow (border) style
  instead of a sunken border
- implemented wxBitmapDataObject
- finished wxClipboard implementation

wxUniv:

- controls in toolbars now supported

wxHTML:

- added text selection to wxHtmlWindow